login view is designed and integrated

--- a/src/main/resources/fr/greta/domes/views/main.fxml
+++ b/src/main/resources/fr/greta/domes/views/main.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,6 +30,14 @@
             </VBox>
             <VBox alignment="TOP_CENTER" prefWidth="540.0" style="-fx-background-color: FF8B00; -fx-opacity: .6;">
                <children>
+                  <Label fx:id="errorMessage" text="Your email/password is wrong" textFill="RED">
+                     <VBox.margin>
+                        <Insets top="198.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
                   <Label style="-fx-font-weight: bold;" text="Login" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="48.0" />
@@ -37,7 +46,7 @@
                         <Insets />
                      </opaqueInsets>
                      <VBox.margin>
-                        <Insets top="206.0" />
+                        <Insets top="8.0" />
                      </VBox.margin>
                   </Label>
                   <VBox>
@@ -50,10 +59,13 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="emailField" maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0" style="-fx-border-radius: 8;">
+                        <TextField fx:id="email" maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0" style="-fx-border-radius: 8;">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
+                           <effect>
+                              <DropShadow offsetX="3.0" offsetY="3.0" />
+                           </effect>
                         </TextField>
                      </children>
                      <VBox.margin>
@@ -70,10 +82,13 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
-                        <TextField maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0">
+                        <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
+                           <effect>
+                              <DropShadow offsetX="3.0" offsetY="3.0" />
+                           </effect>
                         </TextField>
                      </children>
                      <VBox.margin>
@@ -82,7 +97,7 @@
                   </VBox>
                   <VBox alignment="CENTER">
                      <children>
-                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#onHelloButtonClick" prefHeight="48.0" prefWidth="336.0" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" text="Connection" textFill="WHITE">
+                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submit" prefHeight="48.0" prefWidth="336.0" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" text="Connection" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="32.0" />
                            </font>
