--- a/src/main/resources/fr/greta/domes/views/main.fxml
+++ b/src/main/resources/fr/greta/domes/views/main.fxml
@@ -97,7 +97,7 @@
                   </VBox>
                   <VBox alignment="CENTER">
                      <children>
-                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submit" prefHeight="48.0" prefWidth="336.0" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" text="Connection" textFill="WHITE">
+                        <Button fx:id="submitButton" mnemonicParsing="false" onAction="#login" prefHeight="48.0" prefWidth="336.0" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" text="Connection" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="32.0" />
                            </font>
