--- a/src/main/resources/fr/greta/domes/css/dashboard.css
+++ b/src/main/resources/fr/greta/domes/css/dashboard.css
@@ -8,6 +8,28 @@
     -fx-background-radius: 8;
 }
 
+.nav-item {
+    -fx-background-radius: 28;
+    -fx-effect: dropshadow( three-pass-box, rgba(0, 0, 0, 0.1), 1, 1, 1, 0);
+    -fx-cursor: hand;
+}
+
+.nav-item-products {
+    -fx-background-color: rgba(85, 151, 255, 0.6);
+}
+
+.nav-item-clients {
+    -fx-background-color: rgba(255, 139, 0, 0.6);
+}
+
+.nav-item-orders {
+    -fx-background-color: rgba(255, 128, 182, 0.6);
+}
+
+.nav-item-profile {
+    -fx-background-color: rgba(0, 0, 0, 0.25);
+}
+
 .cursor{
     -fx-cursor: hand;
     -fx-fill: "000"
