--- a/src/main/resources/fr/greta/domes/views/dashboard/dashboard.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/dashboard.fxml
@@ -10,7 +10,7 @@
     </left>
 
     <center>
-        <fx:include source="productView.fxml" />
+        <fx:include source="animal/animalView.fxml" />
     </center>
    <opaqueInsets>
       <Insets />
