--- a/src/main/resources/fr/greta/domes/css/login.css
+++ b/src/main/resources/fr/greta/domes/css/login.css
@@ -2,8 +2,23 @@
     Text
 */
 .page-title {
+    -fx-font-size: 42;
+    -fx-font-family: "Roboto Light";
+}
+
+.right {
+    -fx-background-color: rgba(255, 139, 0, 0.6);
+}
+
+.label {
     -fx-font-size: 24;
     -fx-font-family: "Roboto Light";
+    -fx-font-weight: bold;
+    -fx-text-fill: #000000;
+}
+
+.error {
+    -fx-text-fill: #ff0000;
 }
 
 /*
