--- a/src/main/resources/fr/greta/domes/views/dashboard/dashboard.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/dashboard.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="dashboard" prefHeight="832.0" prefWidth="1280.0" stylesheets="@../../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.DashboardController">
+<BorderPane fx:id="dashboard" stylesheets="@../../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.DashboardController">
 
     <left>
         <fx:include source="navigation.fxml" />
