--- a/src/main/resources/fr/greta/domes/views/login.fxml
+++ b/src/main/resources/fr/greta/domes/views/login.fxml
@@ -1,96 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="832.0" prefWidth="1280.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <HBox prefHeight="832.0" prefWidth="1280.0">
-      <VBox alignment="CENTER" prefWidth="740.0" style="-fx-background-color: ECF0F3;" HBox.hgrow="ALWAYS">
-         <ImageView fitHeight="500.0" fitWidth="510.0">
-            <VBox.margin>
-               <Insets />
-            </VBox.margin>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <Pane layoutX="3.0" layoutY="11.0" prefHeight="1000.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+         <ImageView fitHeight="350.0" fitWidth="347.0" layoutX="130.0" layoutY="305.0">
             <Image url="@../images/logo.png" />
          </ImageView>
-      </VBox>
-      <VBox alignment="TOP_CENTER" minWidth="350.0" prefWidth="540.0" style="-fx-background-color: FF8B00; -fx-opacity: .6;">
-         <Label fx:id="errorMessage" text="Your email/password is wrong" textFill="RED">
-            <VBox.margin>
-               <Insets top="198.0" />
-            </VBox.margin>
+      </children>
+   </Pane>
+   <Pane layoutX="686.0" layoutY="-44.0" prefHeight="800.0" prefWidth="600.0" styleClass="right" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+         <HBox alignment="CENTER" layoutY="100.0" prefHeight="35.0" prefWidth="600.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="page-title" text="Login" />
+            </children>
+         </HBox>
+         <HBox alignment="CENTER" layoutX="5.0" layoutY="176.0" prefHeight="35.0" prefWidth="600.0">
+            <children>
+               <Label fx:id="errorMessage" styleClass="error" text="Your email/password is wrong" textFill="RED">
+                  <font>
+                     <Font name="System Bold" size="20.0" />
+                  </font>
+               </Label>
+            </children>
+         </HBox>
+         <VBox alignment="CENTER" layoutY="330.0" prefHeight="76.0" prefWidth="600.0">
+            <children>
+               <VBox alignment="TOP_CENTER">
+                  <children>
+                     <Label text="Email" textFill="WHITE">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Label>
+                     <TextField fx:id="email" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="400.0" styleClass="input">
+                        <effect>
+                           <DropShadow offsetX="3.0" offsetY="3.0" />
+                        </effect>
+                     </TextField>
+                  </children>
+               </VBox>
+            </children>
+         </VBox>
+         <VBox alignment="CENTER" layoutY="450.0" prefHeight="76.0" prefWidth="600.0">
+            <children>
+               <VBox alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity">
+                  <children>
+                     <Label text="Password" textFill="WHITE">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Label>
+                     <PasswordField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="400.0" styleClass="input" />
+                  </children>
+               </VBox>
+            </children>
+         </VBox>
+         <Button fx:id="submitButton" layoutX="191.0" layoutY="582.0" mnemonicParsing="false" onAction="#login" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" styleClass="cursor" text="Connection" textFill="WHITE">
             <font>
-               <Font name="System Bold" size="20.0" />
+               <Font name="System Bold" size="32.0" />
             </font>
-         </Label>
-         <Label text="Login" textFill="WHITE">
-            <font>
-               <Font name="System Bold" size="48.0" />
-            </font>
-            <opaqueInsets>
-               <Insets />
-            </opaqueInsets>
-            <VBox.margin>
-               <Insets top="8.0" />
-            </VBox.margin>
-         </Label>
-         <VBox>
-            <VBox.margin>
-               <Insets bottom="64.0" left="99.0" top="58.0" />
-            </VBox.margin>
-            <Label text="Email" textFill="WHITE">
-               <VBox.margin>
-                  <Insets bottom="8.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField fx:id="email" maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0" styleClass="input">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <effect>
-                  <DropShadow offsetX="3.0" offsetY="3.0" />
-               </effect>
-            </TextField>
-         </VBox>
-         <VBox>
-            <VBox.margin>
-               <Insets bottom="61.0" left="99.0" />
-            </VBox.margin>
-            <Label text="Password" textFill="WHITE">
-               <VBox.margin>
-                  <Insets bottom="8.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TextField fx:id="password" accessibleRole="PASSWORD_FIELD" maxWidth="336.0" minWidth="336.0" prefHeight="50.0" prefWidth="336.0" styleClass="input">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <effect>
-                  <DropShadow offsetX="3.0" offsetY="3.0" />
-               </effect>
-            </TextField>
-         </VBox>
-         <VBox alignment="CENTER">
-            <Button fx:id="submitButton" mnemonicParsing="false" onAction="#login" prefHeight="48.0" prefWidth="336.0" style="-fx-background-color: #5597FF; -fx-background-radius: 30;" styleClass="cursor" text="Connection" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="32.0" />
-               </font>
-            </Button>
-         </VBox>
-      </VBox>
-   </HBox>
+         </Button>
+      </children>
+   </Pane>
 </AnchorPane>
