--- a/src/main/resources/fr/greta/domes/css/animalForm.css
+++ b/src/main/resources/fr/greta/domes/css/animalForm.css
@@ -1,3 +1,9 @@
-.root {
+.save {
+    -fx-background-color: rgba(85, 151, 255, 0.6);
+    -fx-text-fill: white;
+}
 
+.cancel {
+    -fx-background-color: #ccc;
+    -fx-text-fill: white;
 }
