--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalDetailView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalDetailView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -14,8 +15,16 @@
          <Label fx:id="animalRef" alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="295.0" styleClass="txt-body" text="value" textAlignment="RIGHT" />
       </children>
    </HBox>
-   <Button fx:id="editButton" layoutX="543.0" layoutY="427.0" mnemonicParsing="false" styleClass="edit" text="Modifier" />
-   <Button fx:id="deleteButton" layoutX="463.0" layoutY="427.0" mnemonicParsing="false" styleClass="delete" text="Supprimer" />
+   <Button fx:id="editButton" layoutX="543.0" layoutY="427.0" mnemonicParsing="false" text="Modifier">
+      <styleClass>
+         <String fx:value="edit" />
+         <String fx:value="cursor" />
+      </styleClass></Button>
+   <Button fx:id="deleteButton" layoutX="463.0" layoutY="427.0" mnemonicParsing="false" text="Supprimer">
+      <styleClass>
+         <String fx:value="delete" />
+         <String fx:value="cursor" />
+      </styleClass></Button>
    <Text fx:id="description" layoutX="464.0" layoutY="285.0" nodeOrientation="LEFT_TO_RIGHT" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="txt-body" text=" It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." textAlignment="JUSTIFY" wrappingWidth="360.2748718261719" />
    <HBox alignment="TOP_RIGHT" layoutX="626.0" layoutY="152.0" prefHeight="20.0" prefWidth="194.0">
       <children>
