--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalFormView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalFormView.fxml
@@ -1,16 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../../../css/animalForm.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.animal.AnimalFormController">
-   <children>
-      <Label layoutX="71.0" layoutY="162.0" text="ANIMAL FORM VIEW">
-         <font>
-            <Font size="52.0" />
-         </font>
-      </Label>
-   </children>
+<AnchorPane prefHeight="800.0" prefWidth="800.0" stylesheets="@../../../css/animalForm.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.animal.AnimalFormController">
+   <Label layoutX="14.0" layoutY="14.0" text="animaux &gt; formulaire" />
+   <Label layoutX="50.0" layoutY="460.0" text="Quatrième image">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <Label layoutX="50.0" layoutY="83.0" text="Age">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <Label layoutX="50.0" layoutY="125.0" text="Prix">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <TextField fx:id="fourthImageField" layoutX="180.0" layoutY="460.0" prefHeight="40.0" prefWidth="542.0" styleClass="input" />
+   <TextField fx:id="ageField" layoutX="180.0" layoutY="80.0" prefHeight="30.0" prefWidth="90.0" styleClass="input" />
+   <TextField fx:id="priceField" layoutX="180.0" layoutY="125.0" prefHeight="30.0" prefWidth="90.0" styleClass="input" />
+   <TextArea fx:id="descriptionField" layoutX="180.0" layoutY="540.0" prefHeight="92.0" prefWidth="545.0" styleClass="input" />
+   <ChoiceBox fx:id="categoryField" layoutX="180.0" layoutY="175.0" prefHeight="30.0" prefWidth="200.0" />
+   <ChoiceBox fx:id="specieField" layoutX="420.0" layoutY="175.0" prefHeight="30.0" prefWidth="200.0" />
+   <Button fx:id="save" layoutX="500.0" layoutY="649.0" mnemonicParsing="false" onAction="#save" prefHeight="45.0" prefWidth="100.0" text="Enregistrer">
+      <styleClass>
+         <String fx:value="cursor" />
+         <String fx:value="save" />
+      </styleClass></Button>
+   <Button fx:id="cancel" layoutX="625.0" layoutY="650.0" mnemonicParsing="false" onAction="#cancel" prefHeight="45.0" prefWidth="100.0" text="Annuler">
+      <styleClass>
+         <String fx:value="cursor" />
+         <String fx:value="cancel" />
+      </styleClass></Button>
+   <Label layoutX="50.0" layoutY="390.0" text="Troisième image">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <TextField fx:id="mainPictureField" layoutX="180.0" layoutY="230.0" prefHeight="40.0" prefWidth="540.0" styleClass="input" />
+   <Label layoutX="50.0" layoutY="310.0" text="Deuxième image">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <TextField fx:id="secondImageField" layoutX="180.0" layoutY="310.0" prefHeight="40.0" prefWidth="542.0" styleClass="input" />
+   <Label layoutX="50.0" layoutY="230.0" text="Image principale">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
+   <TextField fx:id="thirdImageField" layoutX="180.0" layoutY="390.0" prefHeight="40.0" prefWidth="542.0" styleClass="input" />
+   <Label layoutX="50.0" layoutY="542.0" text="Description :">
+      <font>
+         <Font size="16.0" />
+      </font>
+   </Label>
 </AnchorPane>
