--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
@@ -32,10 +32,10 @@
      <TextField fx:id="maxAgeValue" layoutX="404.0" layoutY="122.0" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="40.0" styleClass="input" />
      <ChoiceBox fx:id="byCategory" layoutX="60.0" layoutY="149.0" prefWidth="150.0" />
      <ChoiceBox fx:id="bySpecie" layoutX="285.0" layoutY="149.0" prefWidth="150.0" />
-   <Button fx:id="filterButton" layoutX="498.0" layoutY="149.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" styleClass="cursor" text="Search" />
-   <Label layoutX="93.0" layoutY="92.0" text="Price" />
+   <Button fx:id="filterButton" layoutX="498.0" layoutY="149.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="80.0" styleClass="cursor" text="Rechercher" />
+   <Label layoutX="93.0" layoutY="92.0" text="Prix" />
    <Label layoutX="318.0" layoutY="92.0" text="Age" />
-    <Label layoutX="46.0" layoutY="14.0" styleClass="link-history" text="animals &gt;" />
+    <Label layoutX="46.0" layoutY="14.0" styleClass="link-history" text="animaux &gt;" />
     <TableView fx:id="animalsTable" editable="true" layoutX="46.0" layoutY="229.0" prefHeight="200.0" prefWidth="706.0" />
     <Pane layoutX="152.0" layoutY="429.0" prefHeight="53.0" prefWidth="503.0">
         <Pagination maxPageIndicatorCount="0" pageCount="2" prefHeight="51.0" prefWidth="503.0" />
@@ -45,7 +45,7 @@
                <MenuItem mnemonicParsing="false" text="Action 2" />
            </items>
         </MenuButton>
-        <MenuButton fx:id="selectSizeValue" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="size">
+        <MenuButton fx:id="selectSizeValue" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="volume">
             <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
