--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -36,21 +35,14 @@
    <Label layoutX="93.0" layoutY="92.0" text="Prix" />
    <Label layoutX="318.0" layoutY="92.0" text="Age" />
     <Label layoutX="46.0" layoutY="14.0" styleClass="link-history" text="animaux &gt;" />
-    <TableView fx:id="animalsTable" editable="true" layoutX="46.0" layoutY="229.0" prefHeight="200.0" prefWidth="706.0" />
-    <Pane layoutX="152.0" layoutY="429.0" prefHeight="53.0" prefWidth="503.0">
-        <Pagination maxPageIndicatorCount="0" pageCount="2" prefHeight="51.0" prefWidth="503.0" />
-        <MenuButton fx:id="selectPageNumber" layoutX="416.0" layoutY="14.0" mnemonicParsing="false" text="Page n°">
-           <items>
-               <MenuItem mnemonicParsing="false" text="Action 1" />
-               <MenuItem mnemonicParsing="false" text="Action 2" />
-           </items>
-        </MenuButton>
+    <TableView fx:id="animalsTable" editable="true" layoutX="46.0" layoutY="229.0" prefHeight="354.0" prefWidth="818.0" />
+    <Pane layoutX="46.0" layoutY="594.0" prefHeight="54.0" prefWidth="818.0">
+        <Pagination fx:id="pagination" layoutX="303.0" layoutY="2.0" maxPageIndicatorCount="0" pageCount="2" prefHeight="51.0" prefWidth="213.0" />
         <MenuButton fx:id="selectSizeValue" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="volume">
-            <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-            </items>
         </MenuButton>
+      <TextField fx:id="pageNumberField" layoutX="721.0" layoutY="14.0" prefHeight="25.0" prefWidth="41.0" promptText="n°" text="1" />
+      <Label layoutX="673.0" layoutY="18.0" text="Page n°" />
+      <Button fx:id="goToPage" layoutX="770.0" layoutY="14.0" mnemonicParsing="false" styleClass="cursor" text="GO" />
     </Pane>
    <SimpleCheckBoxControl layoutX="56.0" layoutY="49.0" prefHeight="17.0" prefWidth="40.0" />
    <CheckBox fx:id="priceCheckboxStatus" layoutX="60.0" layoutY="92.0" mnemonicParsing="false" onAction="#togglePriceCheckbox" styleClass="checkbox" />
