adding a new animal feature OP

--- a/src/main/resources/fr/greta/domes/css/animalForm.css
+++ b/src/main/resources/fr/greta/domes/css/animalForm.css
@@ -7,3 +7,12 @@
     -fx-background-color: #ccc;
     -fx-text-fill: white;
 }
+
+.input-error {
+    -fx-border-color: red;
+    -fx-border-width: 2px;
+}
+
+.button-disabled {
+    -fx-background-color: #ccc;
+}
