--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.dlsc.formsfx.view.controls.SimpleCheckBoxControl?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
@@ -16,6 +17,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane stylesheets="@../../../css/dashboard.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.animal.AnimalController">
     <padding>
@@ -63,4 +65,14 @@
          <String fx:value="cursor" />
       </styleClass>
    </Button>
+   <Button fx:id="reloadButton" alignment="CENTER" layoutX="837.0" layoutY="193.0" mnemonicParsing="false">
+      <graphic>
+         <FontAwesomeIconView glyphName="REFRESH" />
+      </graphic>
+   </Button>
+   <Label fx:id="reloadMessage" layoutX="524.0" layoutY="196.0" text="Nouvelles données disponibles ! Veuillez recharger =&gt;" textFill="RED">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
 </AnchorPane>
