--- a/src/main/resources/fr/greta/domes/views/dashboard/client/clientView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/client/clientView.fxml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.dlsc.formsfx.view.controls.SimpleCheckBoxControl?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.lang.String?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.Pagination?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.ClientController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.client.ClientController">
    <children>
-      <Label layoutX="149.0" layoutY="164.0" text="CLIENT VIEW">
+      <Label layoutX="56.0" layoutY="24.0" styleClass="link-history" text="clients &gt;" />
+      <TableView fx:id="clientsTable" editable="true" layoutX="56.0" layoutY="239.0" prefHeight="354.0" prefWidth="818.0" />
+      <Pane layoutX="56.0" layoutY="604.0" prefHeight="54.0" prefWidth="818.0">
+         <children>
+            <Pagination fx:id="clientPagination" layoutX="303.0" layoutY="2.0" maxPageIndicatorCount="0" pageCount="2" prefHeight="51.0" prefWidth="213.0" />
+            <MenuButton fx:id="clientSelectSizeValue" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="volume" />
+            <TextField fx:id="clientPageNumberField" layoutX="721.0" layoutY="14.0" prefHeight="25.0" prefWidth="41.0" promptText="n°" text="1" />
+            <Label layoutX="673.0" layoutY="18.0" text="Page n°" />
+            <Button fx:id="clientGoToPage" layoutX="770.0" layoutY="14.0" mnemonicParsing="false" styleClass="cursor" text="GO" />
+         </children>
+      </Pane>
+      <SimpleCheckBoxControl layoutX="66.0" layoutY="59.0" prefHeight="17.0" prefWidth="40.0" />
+      <Button fx:id="addClientButton" layoutX="824.0" layoutY="112.0" mnemonicParsing="false" prefWidth="62.0">
+         <graphic>
+            <ImageView fitHeight="75.0" fitWidth="75.0">
+                  <Image url="@../../../images/new_client.png" />
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+            </ImageView>
+         </graphic>
+         <styleClass>
+            <String fx:value="add-animal" />
+            <String fx:value="cursor" />
+         </styleClass>
+      </Button>
+      <Button fx:id="clientReloadButton" alignment="CENTER" layoutX="847.0" layoutY="203.0" mnemonicParsing="false">
+         <graphic>
+            <FontAwesomeIconView glyphName="REFRESH" />
+         </graphic>
+      </Button>
+      <Label fx:id="clientReloadMessage" layoutX="534.0" layoutY="206.0" text="Nouvelles données disponibles ! Veuillez recharger =&gt;" textFill="RED">
          <font>
-            <Font name="System Bold" size="49.0" />
+            <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <TextField fx:id="clientSearchBar" layoutX="56.0" layoutY="201.0" prefHeight="26.0" prefWidth="354.0" />
+      <Button fx:id="clientSearchButton" layoutX="420.0" layoutY="201.0" mnemonicParsing="false" text="Rechercher" />
    </children>
 </AnchorPane>
