--- a/src/main/resources/fr/greta/domes/views/dashboard/order/orderView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/order/orderView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.ClientController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.greta.domes.controller.order.OrderController">
    <children>
       <Label layoutX="149.0" layoutY="164.0" text="ORDER VIEW">
          <font>
