--- a/src/main/resources/fr/greta/domes/css/dashboard.css
+++ b/src/main/resources/fr/greta/domes/css/dashboard.css
@@ -2,6 +2,8 @@
 @import url(navigation.css);
 @import url(animal.css);
 @import url(animalDetail.css);
+@import url(client.css);
+@import url(clientDetail.css);
 
 .root {
     -fx-pref-width: 1200;
