--- a/src/main/resources/fr/greta/domes/views/dashboard/client/clientDetailView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/client/clientDetailView.fxml
@@ -34,7 +34,7 @@
             <String fx:value="client-btn" />
          </styleClass>
       </Button>
-      <Button layoutX="566.0" layoutY="355.0" mnemonicParsing="false" text="Voir toutes les commandes associées">
+      <Button fx:id="showAllClientOrder" layoutX="566.0" layoutY="355.0" mnemonicParsing="false" text="Voir toutes les commandes associées au client">
          <styleClass>
             <String fx:value="display-orders-btn" />
             <String fx:value="client-btn" />
