--- a/src/main/resources/fr/greta/domes/css/dashboard.css
+++ b/src/main/resources/fr/greta/domes/css/dashboard.css
@@ -38,5 +38,17 @@
     -fx-effect: dropshadow( three-pass-box, rgba(0, 0, 0, .25), 0, 0, 2, 2);
 }
 
-.choice-box {
+.input-error {
+    -fx-border-color: red;
+    -fx-border-width: 2px;
+}
+
+.cancel {
+    -fx-background-color: #ccc;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.button-disabled {
+    -fx-background-color: #ccc;
 }
