login feature is OP

--- a/src/main/resources/fr/greta/domes/views/dashboard/animal/animalDetailView.fxml
+++ b/src/main/resources/fr/greta/domes/views/dashboard/animal/animalDetailView.fxml
@@ -39,6 +39,7 @@
    <HBox alignment="TOP_RIGHT" layoutX="626.0" layoutY="125.0" prefHeight="20.0" prefWidth="194.0">
       <children>
          <Label fx:id="age" styleClass="txt-body" text="value" textAlignment="RIGHT" />
+         <Label styleClass="txt-body" text=" mois" textAlignment="RIGHT" />
       </children>
    </HBox>
    <HBox alignment="TOP_RIGHT" layoutX="626.0" layoutY="237.0" prefHeight="20.0" prefWidth="194.0">
